--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         </header>
         <video poster="https://yoyling.oss-cn-shenzhen.aliyuncs.com/video/The_mind_behind_Linux.jpg" controls>
-            <source src="https://yoyling.oss-cn-shenzhen.aliyuncs.com/video/The_mind_behind_Linux.mp4" type="video/mp4">
+            <source src="https://download.cloud.189.cn/file/downloadFile.action?dt=52&expired=1661272654316&sk=F5F475B8ED84DB5CAA0E8BCBF3542F53&ufi=31335116692257720&zyc=5&token=cloud16&sig=Zq5WHSuRXl8K94tZRXpekd8s0kk%3D" type="video/mp4">
             <track src="vtt/track.vtt" srclang="zh-cn" label="中英合并" kind="subtitles" default>
         </video> 
     </div>
