--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Linus Torvalds</title>
-    <meta name="viewport" content="high=device-high,width=device-width, initial-scale=1">
+    <meta name="viewport" content="high=device-high, initial-scale=1">
     <link rel="icon" href="https://yoyling.com/favicon.ico">
     <link rel="stylesheet" href="dist/plyr.css">
     <link rel="stylesheet" href="dist/demo.css?v=2">
@@ -86,7 +86,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Linus Torvalds</title>
-    <meta name="viewport" content="high=device-high,width=device-width, initial-scale=2">
+    <meta name="viewport" content="high=device-high, initial-scale=2">
     <link rel="icon" href="https://yoyling.com/favicon.ico">
     <link rel="stylesheet" href="dist/plyr.css">
     <link rel="stylesheet" href="dist/demo.css?v=2">
